# Gluecksrad

./: Gluecksrad.spec  gluecksrad_V1.py  gluecksrad_V2.py  namen.xlsx
C++/: CMakeLists.txt  README.md  beispiel_namen.csv  gluecksrad.cpp
